gruppo_d/force-app/main/default/objects/Organizzatore__c/Organizzatore__c.object-meta.xml
<CustomObject>
    <label>Organizzatore</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizzatori</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>