gruppo_d/force-app/main/default/objects/Organizzatore__c/fields/Cognome__c.field-meta.xml
<CustomField>
    <fullName>Cognome__c</fullName>
    <label>Cognome</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>