gruppo_d/force-app/main/default/objects/Organizzatore__c/fields/Data_di_nascita__c.field-meta.xml
<CustomField>
    <fullName>Data_di_nascita__c</fullName>
    <label>Data di nascita</label>
    <type>Date</type>
</CustomField>