gruppo_d/force-app/main/default/objects/Organizzatore__c/fields/Indirizzo__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo__c</fullName>
    <label>Indirizzo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>