gruppo_d/force-app/main/default/objects/Organizzatore__c/fields/Manifestazioni_Organizzate__c.field-meta.xml
<CustomField>
    <fullName>Manifestazioni_Organizzate__c</fullName>
    <label>Manifestazioni Organizzate</label>
    <referenceTo>Manifestazione__c</referenceTo>
    <relationshipLabel>Organizzatori</relationshipLabel>
    <relationshipName>Organizzatori</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>